--- a/todo.txt
+++ b/todo.txt
@@ -2,19 +2,20 @@
 [done]
 structure_related_properties 1)
 - dokončit dle zadani (2h) (real 3,25 h)
-- todo v ramci konec, nekonzistence u neigboratom counts a vubec u tech ne-min veci (atomy z cele structure vs jen residuí)
+- [done] v ramci konec, nekonzistence u neighboratom counts a vubec u tech ne-min veci (atomy z cele structure vs jen residuí)
 
 
 
 combining_structure_and_sequence 3)
 - [done] more test data (results not great..., 2.5 A only zinc binding, DNA-binding res. 5 A, but distribution not conclusive)
-- done - chains B and C have high conservation rates for dna binding (4 A), chain A not that much. All three chains have higher conservation
+- [done] - chains B and C have high conservation rates for dna binding (4 A), chain A not that much. All three chains have higher
+conservation
 - [not done] zobrazit ne jen active a non active, ale odlisit zinc a dna a spustit to pro vsechny chainy
     - mozna jindy
 
 rates for zinc binding residues
 (1h)
-
+GUI
 
 structure_superposition 2)
 - alignment mapping
