Notebook -- minor reword, fix minor mistake in text, delete code-comment

--- a/assignment_demos.ipynb
+++ b/assignment_demos.ipynb
@@ -1064,10 +1064,6 @@
     "from Bio.PDB import PDBParser, ResidueDepth, get_surface\n",
     "from Bio.PDB.ResidueDepth import min_dist\n",
     "\n",
-    "# # on my computer the plots were 2x smaller in the jupyter notebook somehow (probably web+retina)\n",
-    "# print(plt.rcParams['figure.figsize'])\n",
-    "# plt.rcParams['figure.figsize'] = list(map(lambda x: x*2, plt.rcParams['figure.figsize']))\n",
-    "\n",
     "from assignments.pdb.pdb import attach_custom_classes_to_pdb_structure_builder\n",
     "\n",
     "attach_custom_classes_to_pdb_structure_builder()\n",
@@ -1657,7 +1653,7 @@
     "\n",
     "In the MSA, there is a sequence that designates the protein chain (the three chains are identical in sequence). We can therefore run the analysis with any of the polypeptide chains. \n",
     "\n",
-    "I will run the analysis for all chains at once, but one may use the first line of the following code to run it for a specific chain."
+    "I will run the analysis for all chains at once, but one may easily modify the snippet below to run it for a specific chain."
    ]
   },
   {
@@ -1684,7 +1680,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will gather all residues that form active sites. That is, they have a hetero atom (small ligand, DNA) in within a set distance. "
+    "We will gather all residues that form active sites. That is, they have a hetero atom (small ligand, DNA) within a set distance. "
    ]
   },
   {
@@ -1850,7 +1846,7 @@
    "source": [
     "The last line initializes a container for superposition RMSD's that we'll use and discuss in the comparison at the end. Another output of this program will be the superimposed structures. More precisely just the first 'a2a' structure with altered coordinates to fit to the orignal '3eml' structure. \n",
     "\n",
-    "Thus to see the alignments in PyMOL, for example, load the original '3eml' structure and then the output files (in the working directory) named 'a2a_\\<alignment method\\>.pdb'"
+    "Thus to see the alignments in PyMOL, for example, load the original '3eml' structure and then the output files (in the working directory) named 'a2a_&lt;alignment method&gt;.pdb'"
    ]
   },
   {
@@ -2004,7 +2000,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The comparison of the superpositions follows. Besides looking at the output structures in PyMOL and checking the RMSDs and matched residues count, I wanted to compare the superpositions even if the matched residues count is different. Is a superposition with 150 matched residues and RMSD of 5 angstroms better than a superposition with 200 matched residues and RMSD of 7.5 angstroms? What if some residues are matched (unfortunately), and their deviation is enormous in comparison to the rest of residues, which would make themselves a good superposition with good RMSD?\n",
+    "The comparison of the superpositions follows. Besides looking at the output structures in PyMOL and checking the RMSDs and matched residues count, I wanted to compare the superpositions even if the matched residues count is different. Is a superposition with 150 matched residues and RMSD of 5 angstroms better than a superposition with 200 matched residues and RMSD of 7.5 angstroms? What if some residues are matched (unfortunately), and their deviation is enormous in comparison to the rest of residues, which would make on their own a good superposition with good RMSD?\n",
     "\n",
     "Therefore I decided to generate a sequence of RMSDs for a superposition, n-th item computed as an RMSD of n atom pairs with the lowest deviation of all superposition's pairs. In the line plot below, you can see the RMSD sequences for all the superpositions computed above. "
    ]
