--- a/assignment_demos.ipynb
+++ b/assignment_demos.ipynb
@@ -2039,11 +2039,11 @@
    "source": [
     "We see that the structural neighborhood alone (at least the single method tested) does not produce a good superposition (`blosum_struct_al2000`, substitution matrix scores negligible in comparison with the 2000x scaled structural score). \n",
     "\n",
-    "However, reasonably weighing in the structural neighborhood in the standard sequence alignment with Blosum62 (in the hindsight with those particular structures I probably should have used a higher similarity matrix), lead to a superposition that had significantly lower RMSD that of just standard sequence alignment (5 vs 8 angstroms), with the same number of matched residues (288).\n",
+    "However, reasonably weighing in the structural neighborhood in the standard sequence alignment with Blosum62 (in hindsight with those particular structures I probably should have used a higher similarity matrix), lead to a superposition that had significantly lower RMSD that the one of just standard sequence alignment (5 vs 8 angstroms), with the same number of matched residues (288).\n",
     "\n",
-    "In the chart we can see that the problem with `blosum_al` is that there are a few residues that are an unfortunate match. Other than that superposition would have a similar RMSD to the structure-weighed-in-alignment superpositions.\n",
+    "In the chart we can see that the problem with `blosum_al` is that there are a few residues that are an unfortunate match. With them omitted, the superposition would have a similar RMSD to the structure-weighed-in-alignment superpositions.\n",
     "\n",
-    "Looking in PyMOL, one cannot really see much difference between the 5 Å RMSD superpositions and the 8 Å `blosum_al`. That might be because a shift in matching residues in a occurred (gaps moved) and suddenly paired residues were more far apart (in a different turn in a helix or further in a loop), but somehow the shift didn't have much rotational and translational potential. Comparison of the sequence alignments and observation of the residues having the largest deviation in PyMOL would explain it more properly."
+    "Looking in PyMOL, one cannot really see much difference between the 5 Å RMSD superpositions and the 8 Å `blosum_al`. That might be because a shift in matching residues occurred (gaps moved) and suddenly paired residues were more far apart (in a different helical turn or further in a loop), but somehow the shift didn't have much rotational and translational potential. Comparison of the sequence alignments and observation of the residues having the largest deviation in PyMOL would explain it more properly."
    ]
   }
  ],
